# emscripten-samples

./: README.md
hello-world/asmjs/c/: build.sh  build_release.sh  cleanup.sh  main.c
hello-world/asmjs/rust/: Cargo.toml  index.html  index_release.html  minilib.js
hello-world/asmjs/rust/.cargo/: config
hello-world/asmjs/rust/src/: lib.rs
